#pragma once

struct GameState {
    int ball_x;
    int ball_y;
    int score;
};
